# sandbox

./: .ble.swp  .gitignore  CMakeLists.txt  Makefile  make_packages.sh  sandbox-config.cmake.in  sandbox.sln
example/: main.cpp
sandbox/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  premake4.lua  sandbox.vcxproj
sandbox/cmake/: FindAssImp.cmake
sandbox/example/: main.cpp
sandbox/example/simulation/: simulation.cpp  simulation.h
sandbox/src/: Makefile  old_main.h  run.sh  sim_main.h
sandbox/src/game/: main.cpp  main.cpp.orig
sandbox/src/rendering/: buffer.cpp  buffer.h  camera.cpp  camera.h  color.cpp  color.h  drawable.cpp  drawable.h  fish.cpp  fish.h  framebuffer.cpp  framebuffer.h  includeGL.h  indexBuffer.h  light.cpp  light.h  line.cpp  line.h  model.cpp  model.h  point_sprite.geom  renderer.cpp  renderer.h  shader.cpp  shader.h  sharedVertexBuffer.cpp  sharedVertexBuffer.h  sprite.cpp  sprite.h  string.cpp  string.h  terrain.cpp  terrain.h  text.cpp  text.h  texture.cpp  texture.h  types.h  vertexBuffer.cpp  vertexBuffer.h
sandbox/src/resources/: font.h  image.cpp  image.h  mesh.cpp  mesh.h  resourceMgr.cpp  resourceMgr.h
sandbox/src/simulation/: .simulation.h.swp  ball.cpp  ball.h  boids.cpp  boids.h  simulation.cpp  simulation.h
sandbox/src/utils/: allocator.cpp  allocator.cpp.orig  allocator.h  allocator.h.orig  code_preprocessor.cpp  code_preprocessor.h  debug.cpp  debug.h  glConstToString.cpp  glDebug.h  hash_map.h  lexical_cast.h  lib.cpp  lib.h  libUtils.cpp  libUtils.h  logger.cpp  logger.h  math.cpp  math.h  mathUtils.cpp  mathUtils.h  misc.h  profiler.cpp  profiler.h  rect.h  singleton.h  socket.h  stringUtils.cpp  stringUtils.h  timer.cpp  timer.h  types.h  vector.h
sandbox/src/window/: event.h  window.cpp  window.h
sandbox/test/: code_preprocessor_test.cpp  test.cpp  test.h
sandbox/unused_code/: old_main.h
(+95 files in other folders)
